pxc/tests/test_194_ephemeral/eph3.px

public namespace eph3;
import core::common -;

pure function cslice{int} test_ephemeral_escape()
{
  varray{int} arr;
  cslice{int} xuns = arr.crange();
  return xuns; // error: short-lived
}

threaded function void test_eph3()
{
  const z = test_ephemeral_escape();
  thread_io().stdout().println(z.size());
}

{
  test_eph3();
}
